# imagebox

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: data.rs  data_manager.rs  image_generator.rs  lib.rs  resource_loader.rs  textarea.rs
crates/tray/: Cargo.toml  build.rs
crates/tray/assets/: tray.raw
crates/tray/src/: app.rs  config.rs  keyboard.rs  main.rs  processor.rs  tray.rs
data/: data.json
src/: app.rs  config.rs  data_manager.rs  image_processor.rs  keyboard.rs  loader.rs  main.rs  processor.rs  tray.rs
src/image_processor/: resource_loader.rs  textarea.rs
