[package]
name = "imagebox"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["XeF2 <contact@xef2.top>"]

[[bin]]
name = "ImageBox"
path = "src/main.rs"

[dependencies]
ab_glyph = "0.2.32"
active-win-pos-rs = "0.9.1"
arboard = "3.6.1"
enigo = "0.6.1"
glob = "0.3.3"
image = "0.25.9"
imageproc = "0.25.0"
notify-debouncer-full = "0.6.0"
open = "5.3.3"
rand = "0.9.2"
rdev = { version = "0.5.3" ,features = ["unstable_grab"] }
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
single-instance = "0.3.3"
tray-icon = "0.21.2"
winit = "0.30.12"

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
