[package]
name = "imagebox-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.100"
glob = "0.3.3"
image = "0.25.9"
imageproc = "0.26.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
